language/move-lang/tests/move_check/expansion/invalid_unpack_assign_mdot_no_struct.move
module M {
    foo() {
        M.f {} = 0
    }
}
